correctif section commentaires alignement

--- a/src/Component/Actus/Actus.css
+++ b/src/Component/Actus/Actus.css
@@ -6,6 +6,7 @@
     border-radius: 10px;
     margin-left: -25px;
     box-shadow: #5E5DF0 0 10px 20px -10px;
+    height: 170px;
 }
 
 #auteurTilte{
@@ -189,9 +190,10 @@
 
 #colonneCom{
     background: white;
-    width: 90%;
-    width: 400px;
-    border-radius: 5px;
-    height: 370px;
+    width: 390px;
+    border-radius: 10px;
+    height: 300px;
     overflow: auto;
+    margin-left: -25px;
+    margin-top: -55px;
 }
