--- a/src/Component/Commentaire/Commentaire.css
+++ b/src/Component/Commentaire/Commentaire.css
@@ -4,7 +4,7 @@
     margin-bottom: 12px;
     background-color: white;
     display: flex;
-    margin-left: -36px;
+    margin-left: -20px;
     box-shadow: #2323324a 0 10px 20px -10px;
     border-radius: 5px;
 }
